# kwikreport

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS  README.md  manage.py  pre_deploy.sh  pyproject.toml  requirements.txt  setup-hooks.sh  vercel.json
.github/workflows/: django.yml  pylint.yml
docs/: index.html  style.css
kwikreport/: asgi.py  settings.py  urls.py  wsgi.py
pages/: admin.py  apps.py  models.py  urls.py  views.py
pages/templates/: account.html  contact.html  home.html
reports/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_alter_report_data.py  0003_alter_report_title.py  0004_report_sharing.py
reports/templates/: add-report-column-modal.html  add-report-row-modal.html  add-report.html  view-report-error.html  view-report.html
static/css/: index.css
static/js/: base.mjs  dashboard-home.mjs  report.mjs  side-nav.js  view-report.mjs
static/js/helpers/: constants.mjs  index.mjs  reports.mjs
templates/: base.html  dashboard_base.html  login.html  nav.html  signup.html
templates/nav/: base.html  nav-content.html
user_profile/: admin.py  apps.py  forms.py  manager.py  models.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py
